fix: make back link work on mobile
place overlay layer above the video element via z-index.
This ensures that the anchor embedded can receive click events
and not be under the video element.

This bug is interesting, because, though positioned elements are
always visually seen above their static siblings, you may still
have to use z-index to place them above those siblings and ensure
they get click events made for the particular spot on the screen
where they are seen.

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,6 +124,7 @@ a{
     height: 20rem;
     width: 100%;
     background-image: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,212,255,0) 100%);
+    z-index: 1; /* place above video element to allow for click events on its anchor */
 }
 
 .menu-btn svg, .close-btn svg{
